<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="WebViewLayout">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informaci_n_de_contacto"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="12dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direcci_n_c_ram_n_y_cajal_12_centro_33205_gij_n_asturias"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_fono_985_09_33_93"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="12dp" />

    <WebView
        android:id="@+id/webViewMapa"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp" />
</LinearLayout>
